1. Refactor code 2. Add interface for querying note detail

--- a/NeverForget/WebContent/WEB-INF/web.xml
+++ b/NeverForget/WebContent/WEB-INF/web.xml
@@ -32,6 +32,10 @@
     <url-pattern>/note/query</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
+    <servlet-name>NoteServlet</servlet-name>
+    <url-pattern>/note/queryOne</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
     <servlet-name>UploadServlet</servlet-name>
     <url-pattern>/file/add</url-pattern>
   </servlet-mapping>
